feat(policies): add new filter option to PolicyReportsPage (#127)
* fix(responsive): avoid cleanup on responsive changes


* feat(openapi): add new route to spec


* feat(router): update backend with new policies route


* feat(policies): add frontend component


* test(policies): add test case for backend router


* fix(test): use correct mock name


---------
